--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,19 +30,19 @@ services:
       redis:
         condition: service_healthy
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3006:3006"
-    volumes:
-      - ./frontend/.env.local:/app/.env.local:ro
-    environment:
-      - NODE_ENV=production
-    command: ["npm", "run", "start"]
-    depends_on:
-      - backend
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3006:3006"
+  #   volumes:
+  #     - ./frontend/.env.local:/app/.env.local:ro
+  #   environment:
+  #     - NODE_ENV=production
+  #   command: ["npm", "run", "start"]
+  #   depends_on:
+  #     - backend
 
 volumes:
   redis-data:
