--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -51,7 +51,7 @@ CMD ["sh", "-c", "gunicorn api:app \
      --forwarded-allow-ips '*' \
      --worker-connections $WORKER_CONNECTIONS \
      --worker-tmp-dir /dev/shm \
-     --preload \
+    #  --preload \
      --log-level info \
      --access-logfile - \
      --error-logfile - \
